--- a/index.html
+++ b/index.html
@@ -237,19 +237,28 @@
                                  </td>
                               </tr>
                            </table>
-                           <table class="detail-section"cellpadding="0"cellspacing="0"border="0"role="presentation"style="font-family:ArialMT,Arial,Helvetica,Times New Roman;color:#393a3d;width:100%;">
+                           <table class="detail-section"cellpadding="0"cellspacing="0"border="0"role="presentation"style="font-family:ArialMT,Arial,Helvetica,Times New Roman;color:#393a3d;width:100%;border-bottom:dotted 1px #babec5;">
                               <tr>
                                  <td>
-                                    <table>
+                                    <table class="detail-section-container"style="font-family:ArialMT,Arial,Helvetica,Times New Roman;color:#393a3d;width:100%;padding:40px 40px 40px 40px;">
                                        <tr>
-                                          <td>
-                                             <table>
+                                          <td class="detail-section-wrapper"style="word-break:break-word;">
+                                             <table class="line-item-container"style="font-family:ArialMT,Arial,Helvetica,Times New Roman;color:#393a3d;width:100%;padding:0px 0px 0px 0px;">
                                                 <tr>
                                                    <td>
-                                                      <table>
+                                                      <table class="title-and-amount"style="font-family:ArialMT,Arial,Helvetica,Times New Roman;color:#393a3d;width:100%;">
                                                          <tr>
-                                                            <td>
-                                                               <div></div>
+                                                            <td class="itemTitleTd"style="width:75%;vertical-align:top;">
+                                                               <div class="itemTitle"style="font-size:18px;font-weight:bold;letter-spacing:0px;text-align:left;color:#393a3d;display:inline-block;">Sales</div>
+                                                            </td>
+                                                            <td class="itemAmountTd"style="vertical-align:top;">
+                                                            <div class="itemAmount"style="font-size:18px;letter-spacing:0px;text-align:right;color:#393a3d;display:inline-block;float:right;">$499.98</div></td>
+                                                         </tr>
+                                                      </table>
+                                                      <table class="width100"style="font-family:ArialMT,Arial,Helvetica,Times New Roman;color:#393a3d;width:100%;">
+                                                         <tr>
+                                                            <td class="itemDesc"style="font-size:16px;padding:10px 0px 0px 0px;line-height:1.35;text-align:left;color:#6b6c72;width:75%;">
+                                                               <div>Opening Balance</div>
                                                             </td>
                                                          </tr>
                                                       </table>
@@ -262,6 +271,75 @@
                                  </td>
                               </tr>
                            </table>
+                           <table class="subTotalContainer"cellpadding="0"cellspacing="0"border="0"role="presentation"style="font-family:ArialMT,Arial,Helvetica,Times New Roman;color:#393a3d;width:100%;padding:40px 40px 20px 0px;overflow:hidden;">
+                              <tr>
+                                 <td align="right">
+                                    <table class="subTotalSection"cellpadding="0"cellspacing="0"border="0"role="presentation"style="font-family:ArialMT,Arial,Helvetica,Times New Roman;color:#393a3d;font-size:18px;">
+                                       <tr class="subtotal-row">
+                                          <td class="totalSummaryLeft"style="padding:0px 40px 20px 0px;color:#393a3d">Balance Due</td>
+                                          <td class="totalSummaryright"style="text-align:right;padding:0px 0px 20px 0px;color:#393a3d">$499.98</td>
+                                       </tr>
+                                    </table>
+                                 </td>
+                              </tr>
+                           </table>
+                           <table class="footerContainer"cellpadding="0"cellspacing="0"border="0"role="presentation"style="font-family:ArialMT,Arial,Helvetica,Times New Roman;color:#393a3d;font-size:18px;"></table>
+                           <table class="width100"cellpadding="0"cellspacing="0"border="0"role="presentation"style="font-family:ArialMT,Arial,Helvetica,Times New Roman;color:#393a3d;width:100%;padding:20px 0px;">
+                              <tr>
+                                 <td align="center">
+                                    <table cellpadding="0"cellspacing="0"border="0"role="presentation"style="font-family:ArialMT,Arial,Helvetica,Times New Roman;color:#393a3d;margin:0 auto;">
+                                       <tr>
+                                          <td class="reviewTab"style="width:200px;height:36px;border-radius:4px;font-size:16px;text-align:center;padding;0px;background-color:#393a3d;">
+                                             <a href="https://intuit.com"class="reviewLabel"style="font-weigth:bold;text-align:middle;color:#ffffff;text-text-decoration:none;padding:10px 50px;white-space:nowrap;width:100%;">Print or Save</a>
+                                          </td>
+                                       </tr>
+                                    </table>
+                                 </td>
+                              </tr>
+                           </table>
+                           <table class="companyAddrSection"cellpadding="0"cellspacing="0"border="0"role="presentation"style="font-family:ArialMT,Arial,Helvetica,Times New Roman;color:#393a3d;width:100%;border-top:dotted 1px #babec5;padding:10px 40px 25px 40px;">
+                              <tr>
+                                 <td>
+                                    <div>
+                                       <div class="companyDetails"style="font-size:15px;text-align:center;color:#6b6c72;margin-top:15px;">Order Confirm</div>
+                                       <div>
+                                          <div class="companyDetails"style="font-size:15px;text-align:center;color:#6b6c72;margin-top:15px;">FI</div>
+                                       </div>
+                                          <div class="additionalDetails"style="text-align:center;">
+                                             <div class="companyDetails"style="font-size:15px;text-align:center;color:#6b6c72;margin-top:15px;display:inline-block;margin-left:10px;margin-right:10px;">+1 1234567889</div>
+                                             <div class="companyDetails"style="font-size:15px;text-align:center;color:#6b6c72;margin-top:15px;display:inline-block;margin-left:10px;margin-right:10px;">shopping@geeksquad.com</div>
+                                          </div>
+                                    </div>
+                                 </td>
+                              </tr>
+                           </table>
+                           <table class="spoofContainer"style="font-family:ArialMT,Arial,Helvetica,Times New Roman;color:#393a3d;border-top:dotted 1px #babec5">
+                              <tr>
+                                 <td class="Msg" style="padding:27px 20px 5px 20px;font-size:15px;color:#6b6c72;text-decoration:none;">
+                                    <div>
+                                       <span>If you receive an email that seems fraudulent, please check with the business owner before paying.</span>
+                                    </div>
+                                 </td>
+                              </tr>
+                           </table>
+                           <div>
+                              <div class="logoSection"style="width:100%;text-align:center;padding-top:30px;padding-bottom:20px;display:block;border:0;">
+                                 <a href="https://intuit.com/"><img src="https://i.ibb.co/HFj0966/Screen-Shot-2022-11-14-at-11-42-48-AM.png" alt="Screen-Shot-2022-11-14-at-11-42-48-AM" border="0"width="125"height="40"style="height:30px;max-height:30px;max-width:125px;"></a>
+                              </div>
+                           </div>
+                           <div style="height:10px;"></div>
+                           <div class="topSectionContainer"style="text-align:center;padding-bottom:50px;">
+                              <div class="tosSection"style="font-size:15px;text-align:center;color:#6b6c72;display:inline-block;margin:10px;">© 
+                                 <span class="yellowMark"style="background-color:rgb(255, 241, 0);color:black;">Intuit, <div>Inc All rights reserved.</div>
+                                 </span>
+                              </div>
+                              <div class="tosSection"style="font-size:15px;text-align:center;color:#6b6c72;display:inline-block;margin:10px;">
+                                 <a href="https://intui.com"style="color:purple;">Privacy |</a>
+                                 <a href="https://intui.com"style="color:purple;">Security |</a>
+                                 <a href="https://intui.com"style="color:purple;">Terms of Service</a>
+                              </div>
+                           </div>
+                           </div>
                         </td>
                      </tr>
                   </table>
